# bako

./: .gitignore  Cargo.toml  README.md
bako-server/: main.py  pyproject.toml  script.py  weather.py
src/: config.rs  db.rs  embeddings.rs  file.rs  logging.rs  main.rs  utils.rs  watcher.rs
src/db/: embedding_repo.rs  file_repo.rs  job_repo.rs
