[package]
name = "bako"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
notify = { version = "8.0.0", features = ["serde"] }
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8.22"
infer = "0.19.0"
rusqlite = "0.35.0"
uuid = { version = "1.16.0", features = ["v4"] }
blake3 = "1.8.2"
directories = "6.0.0"
